  commits will avoid this problem by utilizing the testthat package
  to test code extensively before release

* internal change in confmirt function to move MHRM engine outside the 
  function for better maintenance

* theta_angle added to mirt and polymirt plots for changing the viewing angle 
  w.r..t theta_1 

* null model no longer calculated when missing data present

----------------------------------------------------------------
mirt 0.2.6
---------------------------------------------------------------

* null model computed, allowing for model statistics such as TLI

* documentation changes

* many back end technical details about estimation moved to technical lists

* support for all GPArotation methods and options, including Target rotations

* polymirt() uses confmirt() estimation engine

* 4PL support for mirt() and bfactor(), treating the upper bound as fixed

* coef() now has a rotate option for returning rotated IRT parameters

----------------------------------------------------------------
mirt 0.2.5
---------------------------------------------------------------

* Fixed translation bug in the C++ code from bfactor() causing illegal 
  vector length throw

* Fixed fscores() bug when using polychotomous items for mirt() and 
  bfactor()

* pass rotate='rotation' from mirt and polymirt to override default 
  default 'varimax' rotation at estimation time (suggested by 
  Niels Waller)

* RMSEA, G^2, and p set to NaN instead of internal placeholder when 
  there are missing data

* df adjusted when missing data present  

* oblique rotations return invisible factor correlation matrix

----------------------------------------------------------------
mirt 0.2.4
---------------------------------------------------------------

* degrees of freedom correctly adjusted when using noncompensatory
  items

* confmirtClass reorganized to work with S4 methods, now work
  more consistently with methods. 
